<resources>
    <string name="app_name">Server</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Trạng thái: Đã đặt hàng</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="action_create">Tạo mới</string>
    <string name="action_filter">Lọc</string>
    <string name="menu_category">Loại sản phẩm</string>
    <string name="menu_discount">Khuyến Mãi</string>
    <string name="menu_send">Thông báo</string>
    <string name="menu_drinkslist">Danh sách sản phẩm</string>
    <string name="menu_best_deals">Được Mua Nhiều</string>
    <string name="menu_most_popular">Phổ Biến</string>
    <string name="menu_order">Đơn hàng</string>
    <string name="menu_shipper">Shipper</string>
    <string name="menu_sign_out">Đăng xuất</string>
    <string name="order_count">Đơn hàng (0)</string>
    <string name="status_0">Đã đặt hàng</string>
    <string name="status_1">Đang giao hàng</string>
    <string name="status_2">Đã hoàn thành</string>
    <string name="status_3">Đã hủy đơn</string>
    <string name="status_update_bill">Cập nhật đơn hàng</string>
    <string name="update_status_bill">Cập nhật trạng thái đơn hàng</string>
    <string name="cancelled">Trạng thái: Đã hủy đơn</string>
    <string name="rdi_restore_placed">Khôi phục đơn hàng</string>
    <string name="rdi_delete">Xóa đơn hàng</string>
    <string name="btn_cancel">Từ chối</string>
    <string name="btn_ok">Đồng ý</string>
    <string name="txt_title">CHI TIẾT ĐƠN HÀNG</string>
    <string name="rdi_shipping">Trạng thái: Đang giao hàng</string>
    <string name="rdi_shipped">Đã giao hàng</string>
    <string name="rdi_cancelled">Hủy đơn hàng</string>
    <string name="txt_code">CODE</string>
    <string name="txt_percent">Percent</string>
    <string name="txt_valid">Valid</string>
    <string name="edt_title">Tiêu đề</string>
    <string name="edt_content">Nội dung</string>
    <string name="add_image">Thêm thông tin</string>
    <string name="rdi_none">Hong có</string>
    <string name="rdi_link">Liên kết</string>
    <string name="rdi_image">Tải lên</string>
    <string name="edt_link">Đường dẫn liên kết</string>
    <string name="txt_drinks_name">TRA SUA SIEU CAY</string>
    <string name="txt_drinks_quantity">So Luong: 1</string>
    <string name="txt_drinks_add_on">Addon: Default</string>
    <string name="txt_size">Size: Medium</string>
    <string name="txt_order_number">123456789</string>
    <string name="txt_time">01/10/2000 13:05:00</string>
    <string name="txt_name">Khách hàng: Hồ Nhật phi</string>
    <string name="txt_order_status_item">Trạng thái: Đã đặt hàng</string>
    <string name="txt_number_item">Số lượng sản phẩm: 10</string>
    <string name="edt_name">Tên của bạn</string>
    <string name="edt_phone">Số điện thoại</string>
    <string name="txt_name_shipper">Shipper 01</string>
    <string name="txt_phone_shipper">+84 123456789</string>
    <string name="txt_size_name">Size Name</string>
    <string name="txt_size_price">6.000 VND</string>
    <string name="edt_category_name">Tên loại sản phẩm</string>
    <string name="edt_code_discount">Mã Code</string>
    <string name="edt_percent_discount">Trị giá bao nhiêu</string>
    <string name="text_image">%</string>
    <string name="edt_valid_discount">Hạn sử dụng</string>
    <string name="edt_drinks_name">Tên sản phẩm</string>
    <string name="edt_drinks_price">Giá sản phẩm</string>
    <string name="edt_drinks_description">Mô tả</string>
    <string name="tv_register">Đăng ký</string>
    <string name="tv_topping_size">Topping/Size Name</string>
    <string name="btn_create">Tạo mới</string>
    <string name="btn_edit">Cập nhật</string>
    <string name="tv_new_system">THÔNG BÁO MỚI</string>
    <string name="tv_update">CẬP NHẬT SẢN PHẨM</string>
    <string name="shot_views">Shot Views</string>
    <string name="more">more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>