<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_category" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discount"
            android:icon="@drawable/ic_nav_discount"
            android:title="@string/menu_discount" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_send_news"
            android:icon="@drawable/ic_nav_send_news"
            android:title="@string/menu_send" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_nav_most_popular"
            android:title="@string/menu_most_popular" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_best_deals"
            android:icon="@drawable/ic_nav_best_deals"
            android:title="@string/menu_best_deals" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_nav_order"
            android:title="@string/menu_order" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shipper"
            android:icon="@drawable/ic_nav_shipper"
            android:title="@string/menu_shipper" />
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
        android:icon="@drawable/monitor"
        android:title="DashBoard"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_sign_out"
            android:title="@string/menu_sign_out" />
    </group>


</menu>