<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/status_update_bill"
        android:padding="3dp"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txt_title_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:fontFamily="@font/roboto_slab"
        android:padding="3dp"
        android:text="@string/update_status_bill"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title_small"
        android:fontFamily="@font/roboto_slab"
        android:padding="3dp"
        android:text="@string/nav_header_title"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/rdi_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_status"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rdi_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/rdi_shipping"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdi_cancelled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/rdi_cancelled"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_shippers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/layout_button"
        android:layout_below="@+id/rdi_group"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_slab_bold"
            android:padding="10dp"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_slab_bold"
            android:padding="10dp"
            android:text="@string/btn_ok"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>