<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_default">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/tv_new_system"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_large" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/edt_title"
        android:textColor="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:padding="@dimen/padding_EditText"
            android:textSize="@dimen/font_small" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/edt_content"
        android:textColor="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:padding="@dimen/padding_EditText"
            android:textSize="@dimen/font_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:paddingStart="@dimen/margin_default"
        android:paddingTop="@dimen/margin_default"
        android:paddingEnd="@dimen/margin_default"
        android:text="@string/add_image"
        android:textColor="@color/app_color_default"
        android:textSize="@dimen/font_large" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/rdi_none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/rdi_none"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />

        <RadioButton
            android:id="@+id/rdi_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/rdi_link"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />

        <RadioButton
            android:id="@+id/rdi_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/rdi_image"
            android:textColor="@color/black"
            android:textSize="@dimen/font_small" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_link"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_link"
        android:textColor="@color/black"
        android:visibility="gone"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:padding="@dimen/padding_EditText"
            android:textSize="@dimen/font_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_upload"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_gravity="center"
        android:scaleType="center"
        android:src="@drawable/image"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

</LinearLayout>