<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/card_view"
        android:padding="10dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/img_drinks_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_drinks_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/txt_drinks_name"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_drinks_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/txt_drinks_quantity"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_drinks_add_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/txt_drinks_add_on"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/txt_size"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>